--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,23 @@
 @import "tailwindcss";
+
+@font-face {
+  font-family: "Inter";
+  font-weight: normal;
+  src: url("../../public/assets/fonts/Inter.ttf");
+}
+
+@font-face {
+  font-family: "Inter";
+  font-weight: normal;
+  font-style: italic;
+  src: url("../../public/assets/fonts/Inter-italic.ttf");
+}
+
+@font-face {
+  font-family: "FireCode";
+  src: url("../../public/assets/fonts/FiraCode.ttf");
+}
+
+@theme {
+  --default-font-family: "Inter", "sans-serif"; 
+}
